# yt-chill

./: Cargo.toml  PROMPT.md  README.md  yt-chill.code-workspace
src/: error.rs  lib.rs  main.rs  types.rs
src/core/: downloader.rs  mod.rs  player.rs  youtube.rs
src/storage/: cache.rs  config.rs  history.rs  mod.rs  subscriptions.rs
src/ui/: dialoguer_selector.rs  fzf.rs  mod.rs  selector.rs
src/utils/: mod.rs  paths.rs
