[package]
name = "yt-chill"
version = "0.1.0"
edition = "2024"
description = "YouTube audio in your terminal. Clean and distraction-free."
license = "MIT"
repository = "https://github.com/sonicparke/yt-chill-rs"

[[bin]]
name = "yt-chill"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Terminal UI
colored = "2"
indicatif = "0.17"
dialoguer = "0.11"

# Utilities
dirs = "5"
regex = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
html-escape = "0.2"

# Error handling
anyhow = "1"
thiserror = "2"
urlencoding = "2"

[dev-dependencies]
tokio-test = "0.4"
